--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@ DB_USER=
 DB_PORT=
 DB_PASS=
 DB_NAME=
-
 CLOUD_NAME=
 CLOUD_API_KEY=
 CLOUD_API_SECRET=
+PORT_NODEMAILER=
+HOST_NODEMAILER=
+USER_NODEMAILER=
+PASS_NODEMAILER=
